--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,11 @@
-== README
+== NoteNotes
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A cloud based notes building app which supports a number of users to store their notes online. 
 
-Things you may want to cover:
+=== Highlights
 
-* Ruby version
+* It was a ruby on rails implementation of a cloud notes app
 
-* System dependencies
+* You can sign up as a new user and start storing your notes.
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* It was a part of the web development course of our college
